# atlassian-cli

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  atlassian_config.py  conflu.py  pyproject.toml
.claude/commands/: browse-space.md  edit-page.md  jira-issue.md
.github/workflows/: ci.yml  publish.yml
src/atlassian_cli/: __init__.py  adf.py  config.py  conflu.py  confluence.py  hints.py  http.py  jira.py  jira_assets.py  jira_issues.py  output.py  update_check.py
tests/: conftest.py  test_adf.py  test_config.py  test_conflu.py  test_confluence.py  test_http.py  test_jira_assets.py  test_jira_issues.py  test_output.py
