[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atlassian-cli"
version = "0.3.0"
description = "Fast CLI tools for Atlassian Cloud (Confluence + Jira) — optimized for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Alex Fishlock", email = "alex.fishlock@catapult.cx"},
]
keywords = ["atlassian", "confluence", "jira", "cli", "claude", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "responses>=0.23.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/catapultcx/atlassian-cli"
Repository = "https://github.com/catapultcx/atlassian-cli"
Issues = "https://github.com/catapultcx/atlassian-cli/issues"

[project.scripts]
confluence = "atlassian_cli.conflu:main"
jira = "atlassian_cli.jira:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
